--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "postcss-scss": "^2.0.0"
+  },
+  "dependencies": {
+    "browserslist": "^4.8.2",
+    "caniuse-lite": "^1.0.30001015"
   }
 }
